--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,17 @@
 @import 'tailwindcss';
+
+@layer utilities {
+	.range-slider {
+		@apply h-2 w-full cursor-pointer appearance-none rounded-lg bg-neutral-300;
+
+		/* WebKit (Chrome, Safari) */
+		&::-webkit-slider-thumb {
+			@apply h-4 w-4 appearance-none rounded-full bg-neutral-200 shadow-md;
+		}
+
+		/* Firefox */
+		&::-moz-range-thumb {
+			@apply h-4 w-4 appearance-none rounded-full bg-neutral-600 shadow-md;
+		}
+	}
+}
